Added Monitoring w/ actuator, role-based access, and minor changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # App Properties
 springmicro.app.jwtSecret= IsZu1bvk3G
 springmicro.app.jwtExpirationMs= 86400000
+
+management.port=9001
