--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_microservices?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_microservices?user=postgres&password=S3rver*&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&sslmode=require
+spring.datasource.username=postgres
+spring.datasource.password=S3rver*
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
 
 # App Properties
 springmicro.app.jwtSecret= IsZu1bvk3G
