--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_microservices?user=postgres&password=S3rver*&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&sslmode=require
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/spring_microservices?user=postgres&password=S3rver*&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&sslmode=disable
 spring.datasource.username=postgres
 spring.datasource.password=S3rver*
 
@@ -6,10 +6,10 @@ spring.datasource.password=S3rver*
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # App Properties
 springmicro.app.jwtSecret= IsZu1bvk3G
 springmicro.app.jwtExpirationMs= 86400000
 
-management.port=9001
+management.server.port=9001
